src/test/deca/context/invalid/created/sans_objet/operateur_boolean_1.deca
// Description:
//    opereateur  booléenne &&
//
// Resultats:
//    error line 13 not type boolean
//
// Historique:
//    cree le 13/01/2024

{   
    int x=1;
    int y=2;
   if(x=1 && y==2){
      println("c'est ok");
   }
}
